--- a/API.SolutionPortal/Login.html
+++ b/API.SolutionPortal/Login.html
@@ -46,12 +46,12 @@
                     <a href="javascript:void(0)" class="db"><img src="images/logo.png" alt="Home" /><br /></a>
                     <div class="form-group m-t-40">
                         <div class="col-xs-12">
-                            <input class="form-control" id="txtUserName" type="text" required="" placeholder="Username">
+                            <input class="form-control" id="txtUserName" type="text" required="" placeholder="Kullanıcı Adı">
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="col-xs-12">
-                            <input class="form-control" id="txtPassword" type="password" required="" placeholder="Password">
+                            <input class="form-control" id="txtPassword" type="password" required="" placeholder="Şifre">
                         </div>
                     </div>
 
