part 1- personel page

--- a/API.SolutionPortal/CostCenter.html
+++ b/API.SolutionPortal/CostCenter.html
@@ -167,15 +167,13 @@
                                 <div class="form-group has-success">
                                     <label class="control-label">Şirket Kodu</label>
                                     <select class="form-control custom-select" id="dropCostCenterCompany">
-                                        <option value="">Male</option>
-                                        <option value="">Female</option>
                                     </select>
                                     <small class="form-control-feedback"> Şirket Kodu seçiniz. </small>
                                 </div>
                             </div>
                             <div class="col-md-4">
                                 <label for="txtCostCenterCode">Masraf Yeri Kodu</label>
-                                <input type="text" class="form-control" id="txtCostCenterCode" aria-describedby="txtCostCenterCode" placeholder="Masraf Yeri Kodu">
+                                <input type="text" class="form-control" id="txtCostCenterCode" aria-describedby="txtCostCenterCode" placeholder="Masraf Yeri Kodu" maxlength="3">
                             </div>
 
                             <div class="col-md-4">
