--- a/API.SolutionPortal/Personel.html
+++ b/API.SolutionPortal/Personel.html
@@ -212,8 +212,8 @@
                 <div class="col-12">
                     <div class="card">
                         <div class="card-body">
-                            <h4 class="card-title">Masraf Merkezi </h4>
-                            <h6 class="card-subtitle">Bu tabloda Masraf Merkezi listelenmektedir.</h6>
+                            <h4 class="card-title">Personel Listesi </h4>
+                            <h6 class="card-subtitle">Bu tabloda Personeller listelenmektedir.</h6>
                             <div class="table-responsive">
                                 <table class="table">
                                     <thead>
@@ -221,14 +221,18 @@
                                             <th></th>
                                             <th>Şirket Kodu</th>
                                             <th>Masraf Yeri Kodu</th>
-                                            <th>Masraf Yeri Tanımı</th>
+                                            <th>Personel Kodu</th>
+                                            <th>Adı1</th>
+                                            <th>Adı2</th>
+                                            <th>Soyadı</th>
+                                            <th>TCKN</th>
                                         </tr>
                                     </thead>
                                     <tbody id="tBodyPerson"></tbody>
                                 </table>
                             </div>
-                            <input type="hidden" name="hdPersonClickType" id="hdCostCenterClickType" value="" />
-                            <input type="hidden" name="hdPersonId" id="hdCostCentereId" value="" />
+                            <input type="hidden" name="hdPersonClickType" id="hdPersonClickType" value="" />
+                            <input type="hidden" name="hdPersonId" id="hdPersonId" value="" />
                         </div>
                     </div>
                 </div>
